# ChangeLog for net-wireless/rtl8192se-firmware
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/rtl8192se-firmware/ChangeLog,v 1.3 2010/10/23 11:54:06 chithanh Exp $

  23 Oct 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  rtl8192se-firmware-2.6.0018.1013.2010.ebuild:
  Fix typo in HOMEPAGE, bug #342293

*rtl8192se-firmware-2.6.0018.1013.2010 (22 Oct 2010)

  22 Oct 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  -rtl8192se-firmware-2.6.0017.0705.2010.ebuild,
  +rtl8192se-firmware-2.6.0018.1013.2010.ebuild:
  New upstream release, bug #342067

*rtl8192se-firmware-2.6.0017.0705.2010 (07 Sep 2010)

  07 Sep 2010; Chí-Thanh Christopher Nguyễn <chithanh@gentoo.org>
  +rtl8192se-firmware-2.6.0017.0705.2010.ebuild, +metadata.xml:
  Initial commit, bug #315627
